--- a/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
+++ b/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
@@ -62,8 +62,8 @@
                   <div class="carousel-inner" role="listbox">
 
                       <div class="carousel-item active">
-                        <div class="row">
-                          <div class="col-10 offset-1">
+                        <div class="roww">
+                          <div class="owl-outer-wrap">
 
 
                         <div class="">
@@ -73,17 +73,17 @@
                               </div>-->
                             <!-- <div class=""> -->
                               <owl-carousel
-                              [options]="{items: 3, dots: true, nav: true, responsive: { '0': {  items: 1, margin:2 },
+                              [options]="{items: 3, dots: false, nav: true, responsive: { '0': {  items: 1, margin:2 },
                               '480': { items: 1, margin:2 },
             '640': { items: 2 }
-                         }, autoWidth: true, center:true}"
+                         }, autoWidth: true, center:false}"
                             [items]="selectedLease.equipments"
-                            [carouselClasses]="['owl-theme', 'row', 'sliding']">
+                            [carouselClasses]="['owl-theme', 'sliding']">
                           <div class="item"
                                *ngFor="let item of selectedLease['equipments'];"
                           >
 
-                            <div class="cus-card p-5 col-12 col-md-10 offset-md-1">
+                            <div class="cus-card owl-inner-wrap">
                               <ul>
                                 <li>
                                   <label>Equipment:</label>
@@ -136,7 +136,7 @@
           </div>
 
 
-        
+
         <!--Payment Tab Cnt starts-->
         <div class="tab-pane container-fluid"  [ngClass]="{'active show': selectedIndex == '2' }" id="Payment">
           <div class="card">
