--- a/src/assets/css/urLease.css
+++ b/src/assets/css/urLease.css
@@ -2840,6 +2840,12 @@ button:focus {
   position: relative; }
 
 .loaderpop-inner {
+  width:100%;
+  height: 100%;
+  left:50%;
+  top:50%;
+  margin-left:-135px;
+  margin-top:-75px;
   background: white;
   overflow: hidden;
   width: 270px;
@@ -2848,7 +2854,7 @@ button:focus {
           box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5);
   border-radius: 5px;
   padding-top: 35px;
-  margin: 0 auto; }
+  position: absolute; }
   .loaderpop-inner p {
     text-align: center;
     font-family: SimpleSans-Regular, Helvetica, sans-serif;
@@ -2940,10 +2946,13 @@ button:focus {
   margin: 0px;
   padding: 0px;
   max-width: 100% !important; }
-  #loaderModal .modal-dialog .loaderpop {
-    display: table-cell;
-    width: 270px;
-    vertical-align: middle; }
+ .loaderpop {
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0, .5);
+ }
 
 .owl-outer-wrap {
   padding: 0px 10%; }
