--- a/src/assets/css/urLease.css
+++ b/src/assets/css/urLease.css
@@ -2839,39 +2839,30 @@ button:focus {
 .cookies-wrap.thanks {
   position: relative; }
 
-.loaderpop-inner {
-  width:100%;
+.loaderpop {
+  position: fixed;
+  z-index: 999;
+  width: 100%;
   height: 100%;
-  left:50%;
-  top:50%;
-  margin-left:-135px;
-  margin-top:-75px;
-  background: white;
+  background: rgba(0, 0, 0, 0.5);
+  display: table; }
+
+.loaderpop-inner {
+  background: transparent;
   overflow: hidden;
-  width: 270px;
-  height: 150px;
-  -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5);
-          box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5);
-  border-radius: 5px;
-  padding-top: 35px;
-  position: absolute; }
-  .loaderpop-inner p {
-    text-align: center;
-    font-family: SimpleSans-Regular, Helvetica, sans-serif;
-    color: #0072ce;
-    font-size: 18px;
-    font-weight: normal;
-    line-height: normal;
-    font-style: normal;
-    font-stretch: normal;
-    letter-spacing: normal;
-    margin-top: 5px; }
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  display: table-cell;
+  vertical-align: middle; }
 
 .loaderpop-inner-cnt {
   position: relative;
   overflow: hidden;
-  width: 41px;
-  height: 41px;
+  width: 60px;
+  height: 60px;
+  background: rgba(255, 255, 255, 0.9);
+  border-radius: 35px;
   margin: 0 auto; }
 
 .lds-dual-ring {
@@ -2879,8 +2870,8 @@ button:focus {
   width: 40px;
   height: 40px;
   position: absolute;
-  left: 0px;
-  top: 0px; }
+  left: 10px;
+  top: 10px; }
   .lds-dual-ring:after {
     content: " ";
     display: block;
@@ -2897,8 +2888,8 @@ button:focus {
   width: 32px;
   height: 32px;
   position: absolute;
-  left: 4px;
-  top: 4px; }
+  left: 14px;
+  top: 14px; }
   .lds-dual-ring-s:after {
     content: " ";
     display: block;
@@ -2946,13 +2937,10 @@ button:focus {
   margin: 0px;
   padding: 0px;
   max-width: 100% !important; }
- .loaderpop {
-  position: fixed;
-  z-index: 999;
-  width: 100%;
-  height: 100%;
-  background: rgba(0,0,0, .5);
- }
+  #loaderModal .modal-dialog .loaderpop {
+    display: table-cell;
+    width: 270px;
+    vertical-align: middle; }
 
 .owl-outer-wrap {
   padding: 0px 10%; }
@@ -2999,7 +2987,7 @@ button:focus {
   #Equipment .cus-card ul {
     background-color: #ffffff;
     border: 1px solid rgba(0, 0, 0, 0.2);
-    width: 193px;
+    width: 223px;
     padding: 20px; }
 
 /*********************************** RWD  STARTS here *********************************/
@@ -3017,7 +3005,7 @@ button:focus {
     #Equipment .cus-card ul {
       background-color: #ffffff;
       border: 1px solid rgba(0, 0, 0, 0.2);
-      width: 193px;
+      width: 223px;
       padding: 20px; }
 
   .cookies-wrap {
