new changes done earlier

--- a/src/app/auth/sign-up/signup-stat/signup-stat.component.html
+++ b/src/app/auth/sign-up/signup-stat/signup-stat.component.html
@@ -2,5 +2,14 @@
   <h1>{{heading}}</h1>
   <p innerHTML="{{description}}"></p>
   <h1 class="clrFix" *ngIf="locked">877-257-2094</h1>
+  <div class="row">
+      <div class="cookies-wrap signup-wrap newUser" >
+        <p> 2017-2018 First Data Corporation. All Rights Reserved.&nbsp;<a href="https://www.firstdata.com/en_us/privacy.html"
+                                                                     target="blank">Privacy Policy.</a></p>
+        <p>This site uses cookies. By continuing to browse the site you are agreeing to our <a target="target"
+                                                                                               [routerLink]="['/cookiesdisclosure']">Cookie
+          Policy.</a></p>
+      </div>
+    </div>
 
 </div>
