--- a/src/app/landing-page/land-cnt-02/land-cnt-02.component.html
+++ b/src/app/landing-page/land-cnt-02/land-cnt-02.component.html
@@ -3,26 +3,31 @@
     <div class="landtxtwrap rowtwo">
       <h4 class="fd-SubHeading"> Global Leasing - Partner Benefits</h4>
       <ul>
-        <li><span>1.</span><span class="stBld">Quick Funding – </span>95% of leases processed for funding same day
-          through FDGL’s high-performance
-          boarding team
+        <li>
+          <span>1.</span>
+          <span class="stBld">Quick Funding – </span>95% of leases processed for funding same day through FDGL’s high-performance boarding team
         </li>
-        <li><span>2.</span><span class="stBld">Competitive Funding Rates – </span>lucrative up-front lease funding
-          gives you immediate access
-          to cash to invest in your business
+        <li>
+          <span>2.</span>
+          <span class="stBld">Competitive Funding Rates – </span>lucrative up-front lease funding gives you immediate access to cash to invest
+          in your business
         </li>
-        <li><span>3.</span><span class="stBld">Improved Merchant Retention – </span>leases help guard against early
-          life merchant attrition
+        <li>
+          <span>3.</span>
+          <span class="stBld">Improved Merchant Retention – </span>leases help guard against early life merchant attrition
         </li>
-        <li><span>4.</span><span class="stBld">Partner Friendly Tools – </span>online application submission and
-          tracking processes as well as
-          web-based portfolio reporting tools
+        <li>
+          <span>4.</span>
+          <span class="stBld">Partner Friendly Tools – </span>online application submission and tracking processes as well as web-based portfolio
+          reporting tools
         </li>
-        <li><span>5.</span><span class="stBld">Stability –</span>strength and scale of First Data with dedicated
-          operations and partner
-          management teams
+        <li>
+          <span>5.</span>
+          <span class="stBld">Stability –</span>strength and scale of First Data with dedicated operations and partner management teams
         </li>
-        <li><span>6.</span><span class="stBld">The highest level of integrity in the industry!</span>
+        <li>
+          <span>6.</span>
+          <span class="stBld">The highest level of integrity in the industry!</span>
         </li>
 
       </ul>
@@ -34,17 +39,21 @@
 
 </div>
 <!--Landing page Footer Starts-->
-  <div class="row land-footer ">
-    <div class="col   ">
-      <!--<img class="img-fluid" src="./assets/img/bg-footer.png">-->
-
+<div class="row land-footer ">
+  <div class="col   ">
+    <!--<img class="img-fluid" src="./assets/img/bg-footer.png">-->
+    <!-- <div class="row"> -->
+    <div class="cookies-wrap land-wrap ">
+      <p> 2017-2018 First Data Corporation. All Rights Reserved.&nbsp;
+        <a href="https://www.firstdata.com/en_us/privacy.html" target="blank">Privacy Policy.</a>
+      </p>
+      <p>This site uses cookies. By continuing to browse the site you are agreeing to our
+        <a target="target" [routerLink]="['/cookiesdisclosure']">Cookie Policy.
+        </a>
+      </p>
     </div>
-
+    <!-- </div> -->
   </div>
 
 
-
-
-
-
-
+</div>
