--- a/src/app/auth/new/signchangepass/signchangepass.component.html
+++ b/src/app/auth/new/signchangepass/signchangepass.component.html
@@ -32,7 +32,7 @@
                     (blur)="onInputBlur($event);"
                   >
                   <!-- <div *ngIf="!tempPass.valid"> -->
-                    <div class="fd-error" (click)="validationError.tempPasswordError = false"
+                    <div class="fd-error" (click)="hideTempPasswordError()"
                     *ngIf="validationError.tempPasswordError && submitted">Incorrect temporary password
                     </div>
                   <!-- </div> -->
@@ -90,7 +90,7 @@
 
 
                   <div *ngIf="validationError.newPasswordError">
-                    <div class="fd-error" (click)="validationError.newPasswordError = false"
+                    <div class="fd-error" (click)="hidePasswordError()"
                     *ngIf="validationError.newPasswordError && submitted">Incorrect password format
                     </div>
                   </div>
@@ -111,7 +111,7 @@
                   >
 
                   <div *ngIf="validationError.confirmPasswordError">
-                    <div class="fd-error" (click)="validationError.confirmPasswordError = false"
+                    <div class="fd-error" (click)="hideConfPasswordError()"
                     *ngIf="validationError.confirmPasswordError  && submitted">Passwords do not match
                     </div>
                   </div>
