new changes done

--- a/src/app/auth-temp/temp-signin/temp-signin.component.html
+++ b/src/app/auth-temp/temp-signin/temp-signin.component.html
@@ -73,10 +73,10 @@
   <div class="row">
     <div class="cookies-wrap">
       <p> 2018-2019 First Data Corporation. All Rights Reserved.&nbsp;<a href="https://www.firstdata.com/en_us/privacy.html"
-                                                                   target="blank">Privacy Policy.</a></p>
+                                                                   target="blank">Privacy.</a></p>
       <p>This site uses cookies. By continuing to browse the site you are agreeing to our <a target="target"
-                                                                                             [routerLink]="['/cookiesdisclosure']">Cookie
-        Policy.</a></p>
+                                                                                             [routerLink]="['/cookiesdisclosure']">Cookies.
+        </a></p>
     </div>
   </div>
 </div>
