--- a/src/app/auth/sign-up/signup-main/signup-main.component.html
+++ b/src/app/auth/sign-up/signup-main/signup-main.component.html
@@ -18,10 +18,9 @@
   <div class="row">
     <div class="cookies-wrap signup-wrap" *ngIf="showstat">
       <p> 2018-2019 First Data Corporation. All Rights Reserved.&nbsp;<a href="https://www.firstdata.com/en_us/privacy.html"
-                                                                   target="blank">Privacy Policy.</a></p>
+                                                                   target="blank">Privacy.</a></p>
       <p>This site uses cookies. By continuing to browse the site you are agreeing to our <a target="target"
-                                                                                             [routerLink]="['/cookiesdisclosure']">Cookie
-        Policy.</a></p>
+                                                                                             [routerLink]="['/cookiesdisclosure']">Cookies.</a></p>
     </div>
   </div>
 
