--- a/src/app/auth-temp/change-temp-pass/change-temp-pass.component.html
+++ b/src/app/auth-temp/change-temp-pass/change-temp-pass.component.html
@@ -1,3 +1,12 @@
+<div class="loaderpop" *ngIf="loaderStatus">
+  <div class="loaderpop-inner">
+    <div class="loaderpop-inner-cnt">
+      <div class="lds-dual-ring"></div>
+      <div class="lds-dual-ring-s"></div>
+    </div>
+  </div>
+</div>
+
 <div id="signWrap" class="container-fluid">
   <div class="row">
     <div class="col-sm-12">
@@ -105,7 +114,7 @@
                     validateEqual="passwordNew"
                     #confPassword="ngModel"
                     #cPass
-                    (blur)="onInputBlur($event);"
+                    (blur)="onInputBlur($event);" (focus)="validate($event)"
                   >
 
                   <div *ngIf="validationError.confirmPasswordError">
