--- a/src/app/dashboard/payment-help-popup/payment-help-popup.component.html
+++ b/src/app/dashboard/payment-help-popup/payment-help-popup.component.html
@@ -21,7 +21,9 @@
         <p class="text-left"><span>Mail:</span>Simply mail a check payable to First Data</p>
         <p class="popbld">First Data Global Leasing<br>
           PO Box 173845<br>
-          Denver, CO 80217</p>
+          Denver, CO 80217<br></p>
+          <p class="text-left"><span>Customer Service:</span><span style="color: #3e3e3e;font-family: SimpleSans-Bold, Helvetica, sans-serif;"><a href="tel:+1 877-257-2094">+1 877-257-2094</a></span></p>
+          
 
         <br><br>
 
