new changes made

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
 <!-- landing page -->
+<div class="loaderpop" *ngIf="loader">
+    <div class="loaderpop-inner">
+      <div class="loaderpop-inner-cnt">
+        <div class="lds-dual-ring"></div>
+        <div class="lds-dual-ring-s"></div>
+      </div>
+    </div>
+  </div>
 <router-outlet></router-outlet>
 
