--- a/src/app/dashboard/payment-help-popup/payment-help-popup.component.html
+++ b/src/app/dashboard/payment-help-popup/payment-help-popup.component.html
@@ -14,7 +14,7 @@
       <div class="modal-body ">
         <div class="mod-heading mb-5">How to Make a Payment</div>
         <p class="text-left">Please include your lease number on the check</p>
-        <p class="text-left"><span>Email:</span>Copy of a voided check to <a
+        <p class="text-left"><span>Email:</span>Copy of a voided check to <a style="font-weight: bold; font-family: SimpleSans-Bold, Helvetica, sans-serif;"
           href="mailto:lease.accounting@firstdata.com"
           target="_new">lease.accounting@firstdata.com</a>
         </p>
@@ -22,7 +22,7 @@
         <p class="popbld">First Data Global Leasing<br>
           PO Box 173845<br>
           Denver, CO 80217<br></p>
-          <p class="text-left"><span>Customer Service:</span><span style="color: #3e3e3e;font-family: SimpleSans-Bold, Helvetica, sans-serif;"><a href="tel:+1 877-257-2094">+1 877-257-2094</a></span></p>
+          <p class="text-left"><span>Phone:</span>Call Customer Service at <span><a href="tel:+1 877-257-2094" style="color: #3e3e3e; font-weight: bold; font-family: SimpleSans-Bold, Helvetica, sans-serif;">+1 877-257-2094</a></span></p>
           
 
         <br><br>
