--- a/src/assets/css/urLease.css
+++ b/src/assets/css/urLease.css
@@ -2338,7 +2338,7 @@ button:focus {
   font-family: SimpleSans-Bold, Helvetica, sans-serif;
   color: #3e3e3e;
   font-size: 14px;
-  font-weight: normal;
+  font-weight: bold;
   line-height: 18px;
   font-style: normal;
   font-stretch: normal;
