alignment changes made in codes

--- a/src/app/dashboard/contact/contact.component.html
+++ b/src/app/dashboard/contact/contact.component.html
@@ -12,7 +12,7 @@
   <div class="db-inner-box col-12 contactWrap ">
     <div class="faqWrap">Contact</div>
     <div class="btmBorder"></div>
-    <p>Customer Service: +1 877-257-2094</p>
+    <p>Customer Service:<a style="color: #3e3e3e;" href="tel:+1 877-257-2094"> +1 877-257-2094</a></p>
 
 
 
