--- a/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
+++ b/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
@@ -244,7 +244,7 @@
               <div class="row">
 
                 <!--col one-->
-                <div class="col-12">
+                <div class="col-12 contracttest">
                   <ul>
                     <!--Lease Status:-->
                     <li class="col-md-6 col-lg-3">
@@ -270,7 +270,7 @@
                         <a id="Buyout-trigger" class="btn">
                         </a>
                         <span class="tooltip2" id="Buyout-tooltip" style="display: none;">
-                          This quote includes buying out your lease and you keeping the equipment.  For a different Buyout Quote in returning the equipment contact customer service at: +1 877-257-2094.
+                          This quote includes buying out your lease and you keeping the equipment.  For a different Buyout Quote in returning the equipment contact customer service at:<a style="color: white;" href="tel:+1 877-257-2094"> +1 877-257-2094.</a>
                         <div class="Buyout arrowwrap"><img src="/assets/img/blue_triangle.svg"></div>
                         </span>
 
